<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/FinApplet.Toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_unzip_assets_framework"
                style="@style/ButtonStyle"
                android:text="@string/unzip_assets_framework" />

            <Button
                android:id="@+id/btn_clear_framework"
                style="@style/ButtonStyle"
                android:text="@string/clear_framework" />

            <Button
                android:id="@+id/btn_finish_applets"
                style="@style/ButtonStyle"
                android:text="@string/finish_all_running_applets" />

            <Button
                android:id="@+id/btn_clear_applets"
                style="@style/ButtonStyle"
                android:text="@string/clear_all_applets" />

            <Button
                android:id="@+id/btn_scan_start_applet"
                style="@style/ButtonStyle"
                android:text="@string/scan_start_applet" />

            <Button
                android:id="@+id/btn_test_applets"
                style="@style/ButtonStyle"
                android:text="@string/test_applets" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>